# skypy

./: .gitignore  LICENCE  README.md  main.py  requirements.txt  setup.cfg  setup.py
env/Scripts/: activate  activate.bat
examples/: query_auction_house.py  use_query_api.py
examples/best_forge_flips/: forge_products.txt  get_best_flips.py  get_forge_items.py
skypy/: __init__.py  auction.py  auction_house.py  errors.py  globals.py  item.py
skypy/auction/: __init__.py  auction.py  auction_category.py  auction_house.py
skypy/auction/query/: __init__.py  query_object.py
skypy/bazaar/: __init__.py
skypy/items/: __init__.py  enchant.py  enchanted_book.py  item.py  item_stats.py  rarity.py  weapon.py
skypy/src/: __init__.py  auction_house.py  item.py
skypy/utils/: __init__.py  network.py
test/: test_utils.py
