[metadata]
name = skypy-arjpeg
version = 0.1.0
author = arjpeg
author_email = araoudupi@gmail.com
description = A small wrapper for the Hypixel Skyblock api
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/arjpeg/skypy
project_urls =
    Bug Tracker = https://github.com/arjpeg/skypy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = skypy
packages = find:
python_requires = >=3.10

[options.packages.find]
where = skypy